--- a/config/locales/global.yml
+++ b/config/locales/global.yml
@@ -97,6 +97,9 @@ fr:
         - 👬 faire goûter une boisson qu'il n'aime pas
         - 🕺 lâcher un pas de danse
         - 📱 faire sonner ton téléphone
+        - 💒 raconter une anecdote avec la personne mariée
+        - 💒 raconter la rencontre avec la personne mariée
+        - 💒 dire la plus grande qualité ou le plus grand défaut la personne mariée
 en:
   application_name: Killer game
   french_version: 🇫🇷 Version française
@@ -194,3 +197,6 @@ en:
         - 👬 give him a taste of a drink he doesn't like
         - 🕺 drop a dance step
         - 📱 make your phone ring
+        - 💒 tell an anecdote with the married person
+        - 💒 tell about the meeting with the bride
+        - 💒 tell the greatest quality or the greatest defect of the bride or the bride
