--- a/api/todo.txt
+++ b/api/todo.txt
@@ -5,7 +5,7 @@ x 2023-11-04 display podium +player-dashboard
 fix multiple toast +game-dashboard
 add finished state
 allow gamemaster to change order
-display created / joined games
+x 2023-11-06 display created / joined games
 x 2023-11-05 format date
 edit actions +game-dashboard
 x 2023-11-05 hide dead player from the timeline +game-dashboard
