--- a/frontend/locales/en/homepage.json
+++ b/frontend/locales/en/homepage.json
@@ -1,50 +1,50 @@
 {
+  "Feedbacks": {
+    "feedback1": {
+      "content": "I had my 30th birthday and wanted a game to let everyone talk to each other. Thanks to the killer there was a great atmosphere!",
+      "name": "Alexandre"
+    },
+    "feedback2": {
+      "content": "For my wedding I wanted an original activity but not too complicated to organize. My guests loved it and still talk about it :)",
+      "name": "Lorene"
+    },
+    "feedback3": {
+      "content": "In charge of organizing my company seminar I came across this site by chance. The game was a real success, I think I will use it again for my personal events.",
+      "name": "Elisa"
+    },
+    "title": "Testimonials"
+  },
+  "GamesCreated": {
+    "title": "Games created"
+  },
   "headline": "Are you organizing an event and want everyone to get to know each other? You've come to the right place!",
+  "HomeHeroCardContent": {
+    "create": "Create a game",
+    "join": "Join a game",
+    "or": "OR"
+  },
   "HowDoesItWork": {
-    "title": "How does it work ?",
     "descriptions": [
       "I created this application to manage a game of Killer with more than 60 players.",
       "Managing the game is not an easy task! Knowing the state of the game in real time, distributing cards to everyone, managing absentees and above all, making it fun.",
       "This application allows you to do all that!"
     ],
     "step1": {
-      "title": "You create your game",
-      "description": "We ask you the participants and the actions they will have to do (don't panic, we propose you many)."
+      "description": "We ask you the participants and the actions they will have to do (don't panic, we propose you many).",
+      "title": "You create your game"
     },
     "step2": {
-      "title": "The game is generated",
-      "description": "The application generates cards so that all the opponents can meet without being blocked."
+      "description": "The application generates cards so that all the opponents can meet without being blocked.",
+      "title": "The game is generated"
     },
     "step3": {
-      "title": "You start the game",
-      "description": "All the participants receive their mission by mail. They access to a dashboard page with the game's state."
+      "description": "All the participants receive their mission by mail. They access to a dashboard page with the game's state.",
+      "title": "You start the game"
     },
     "step4": {
-      "title": "And that's it",
-      "description": "You have access to a real time dashboard of the game, you know who is winning and who is losing."
-    }
-  },
-  "HomeHeroCardContent": {
-    "create": "Create a game",
-    "join": "Join a game",
-    "or": "OR"
-  },
-  "Feedbacks": {
-    "title": "Testimonials",
-    "feedback1": {
-      "name": "Alexandre",
-      "content": "I had my 30th birthday and wanted a game to let everyone talk to each other. Thanks to the killer there was a great atmosphere!"
+      "description": "You have access to a real time dashboard of the game, you know who is winning and who is losing.",
+      "title": "And that's it"
     },
-    "feedback2": {
-      "name": "Lorene",
-      "content": "For my wedding I wanted an original activity but not too complicated to organize. My guests loved it and still talk about it :)"
-    },
-    "feedback3": {
-      "name": "Elisa",
-      "content": "In charge of organizing my company seminar I came across this site by chance. The game was a real success, I think I will use it again for my personal events."
-    }
-  },
-  "GamesCreated": {
-    "title": "Games created"
+    "title": "How does it work ?"
   }
 }
