--- a/frontend/locales/fr/homepage.json
+++ b/frontend/locales/fr/homepage.json
@@ -1,1 +1,50 @@
-{}
+{
+  "Feedbacks": {
+    "feedback1": {
+      "content": "J'ai fêté mes 30 ans et je voulais un jeu pour permettre à tout le monde de se parler. Grâce au killer il y a eu une super ambiance !",
+      "name": "Alexandre"
+    },
+    "feedback2": {
+      "content": "Pour mon mariage je voulais une activité originale mais pas trop compliquée à organiser. Mes invités ont adoré et m'en parlent encore :)",
+      "name": "Lorene"
+    },
+    "feedback3": {
+      "content": "En charge d'organiser mon séminaire d'entreprise je suis tombée par hasard sur ce site. Le jeu a été un vrai succès, je pense le réutiliser pour mes événements perso.",
+      "name": "Elisa"
+    },
+    "title": "Testimonials"
+  },
+  "GamesCreated": {
+    "title": "Partie crées"
+  },
+  "headline": "Tu organises un événement et tu veux que tout le monde apprenne à se connaître? Tu es au bon endroit!",
+  "HomeHeroCardContent": {
+    "create": "Créer une partie",
+    "join": "Rejoindre une partie",
+    "or": "OU"
+  },
+  "HowDoesItWork": {
+    "descriptions": [
+      "J'ai créé cette application pour gérer une partie de Killer à plus de 60.",
+      "Gérer la partie n'est pas une mince affaire! Connaître l'état de la partie en temps réel, distribuer les cartes à tout le monde, gérer les absents et surtout, rendre ça fun.",
+      "Cette application te permet de faire tout cela."
+    ],
+    "step1": {
+      "description": "On te demande les participants et les actions qu'ils devront faire (pas de panique, on t'en propose plein)",
+      "title": "Tu crées ta partie"
+    },
+    "step2": {
+      "description": "L'application génère des cartes pour faire en sorte que tous les adversaires puissent se rencontrer sans être bloqués.",
+      "title": "On génère la partie"
+    },
+    "step3": {
+      "description": "Tous les participants reçoivent leur mission par mail. Ils ont accès à un tableau de bord avec l'état de la partie.",
+      "title": "Tu lances la partie"
+    },
+    "step4": {
+      "description": "Tu as accès à un tableau de bord de la partie en temps réel, tu sais qui est en train de gagner et qui a perdu",
+      "title": "Et voilà"
+    },
+    "title": "How does it work ?"
+  }
+}
