--- a/frontend/locales/en/common.json
+++ b/frontend/locales/en/common.json
@@ -1,68 +1,68 @@
 {
   "appName": "Killer game",
   "appNameLong": "Killer game generator",
-  "dontShareUrl": "Do not share this URL, it contains your private token and give access to your profile.",
-  "gameUrlNotValid": "The URL is not valid (the password may be incorrect)",
-  "gameHasStarted": "The game has started",
-  "gameHasStopped": "The game stopped",
+  "AvatarEditor": {
+    "bgColor": "color",
+    "earSize": "Ear",
+    "faceColor": "Skin",
+    "glassesStyle": "Glasses",
+    "hairColor": "Hair color",
+    "hairStyle": "Hair",
+    "hatStyle": "hat",
+    "mouthStyle": "Mouth",
+    "noseStyle": "Nose",
+    "shirtStyle": "Shirt"
+  },
   "count": {
-    "player_zero": "{{count}} players",
+    "game_one": "{{count}} game",
+    "game_other": "{{count}} games",
+    "game_zero": "{{count}} games",
     "player_one": "{{count}} player",
     "player_other": "{{count}} players",
-    "game_zero": "{{count}} games",
-    "game_one": "{{count}} game",
-    "game_other": "{{count}} games"
+    "player_zero": "{{count}} players"
+  },
+  "dashboard": {
+    "events": "Events",
+    "podium": "Podium",
+    "timeline": "Timeline"
+  },
+  "dontShareUrl": "Do not share this URL, it contains your private token and give access to your profile.",
+  "Footer": {
+    "aboutMe": "About me",
+    "actions": "Action list for a game of Killer",
+    "externalLinks": "External links",
+    "github": "Source code (Github)",
+    "help": "How does the killer game work?",
+    "sitemap": "Sitemap",
+    "switchLang": "🇫🇷 Version française"
   },
   "GameCard": {
     "see": "See the game"
   },
-  "dashboard": {
-    "timeline": "Timeline",
-    "events": "Events",
-    "podium": "Podium"
-  },
-  "GameStartedBadge": {
-    "progress": "In progress",
-    "pending": "Draft"
-  },
-  "AvatarEditor": {
-    "earSize": "Ear",
-    "hairStyle": "Hair",
-    "hairColor": "Hair color",
-    "faceColor": "Skin",
-    "bgColor": "color",
-    "hatStyle": "hat",
-    "mouthStyle": "Mouth",
-    "noseStyle": "Nose",
-    "shirtStyle": "Shirt",
-    "glassesStyle": "Glasses"
-  },
-  "PlayerStatusBadge": {
-    "dead": "Dead",
-    "alive": "Alive"
-  },
-  "GamePodium": {
-    "rank": "Rank",
-    "player": "Player",
-    "kills": "Kills"
-  },
   "GameCreateForm": {
+    "actionsField": "Actions",
     "defaultName": "My new game",
     "nameField": "Title of the game",
-    "actionsField": "Actions",
     "submit": "Create the game"
   },
-  "Footer": {
-    "sitemap": "Sitemap",
-    "github": "Source code (Github)",
-    "help": "How does the killer game work?",
-    "actions": "Action list for a game of Killer",
-    "aboutMe": "About me",
-    "switchLang": "🇫🇷 Version française",
-    "externalLinks": "External links"
-  },
+  "gameHasStarted": "The game has started",
+  "gameHasStopped": "The game stopped",
   "GameJoinForm": {
     "gameToken": "Token of the game",
     "submit": "Join the game"
+  },
+  "GamePodium": {
+    "kills": "Kills",
+    "player": "Player",
+    "rank": "Rank"
+  },
+  "GameStartedBadge": {
+    "pending": "Draft",
+    "progress": "In progress"
+  },
+  "gameUrlNotValid": "The URL is not valid (the password may be incorrect)",
+  "PlayerStatusBadge": {
+    "alive": "Alive",
+    "dead": "Dead"
   }
 }
