--- a/frontend/locales/fr/common.json
+++ b/frontend/locales/fr/common.json
@@ -39,7 +39,7 @@
   "GameCard": {
     "see": "Voir la partie"
   },
-  "GameCreateForm": {
+  "GameForm": {
     "actionsField": "Actions",
     "defaultName": "Ma nouvelle partie",
     "nameField": "Titre de la partie",
