--- a/frontend/locales/en/homepage.json
+++ b/frontend/locales/en/homepage.json
@@ -1,4 +1,7 @@
 {
+  "betaWarning": {
+    "1": "This application is in beta stage. If you find any issue or have any feedback, feel free to reach me: "
+  },
   "Feedbacks": {
     "feedback1": {
       "content": "I had my 30th birthday and wanted a game to let everyone talk to each other. Thanks to the killer there was a great atmosphere!",
@@ -13,9 +16,6 @@
       "name": "Elisa"
     },
     "title": "Testimonials"
-  },
-  "GamesCreated": {
-    "title": "Games created"
   },
   "headline": "Are you organizing an event and want everyone to get to know each other? You've come to the right place!",
   "HomeHeroCardContent": {
@@ -49,11 +49,22 @@
     "title": "How does it work ?"
   },
   "Pricing": {
-    "description1": "I mean, really free. No credit card required, no recurring fees, no ads: nothing!",
+    "description1": "I mean, really free! No credit no account, no card required, no recurring fees, no ads: nothing!",
     "description2": "I made this app mainly for me, I try to push the idea for the fun.",
+    "features": {
+      "contactSupport": "contact the support (me)",
+      "createGames": "create unlimited number of parties",
+      "fun": "have all the fun you want",
+      "invitePlayers": "invite many people as you want",
+      "iWillWork": "I'll work more on the project",
+      "sameAsFree": "Same as free"
+    },
+    "free": "Free",
+    "payAsYouWant": "Pay as you want.",
+    "sayThankYou": "Say \"Thank you\"",
+    "sponsor": "Sponsor",
     "supportMeLinks": {
-      "paypal": "Paypal",
-      "title": "Support me"
+      "paypal": "Paypal"
     },
     "title": "It's free!"
   }
