--- a/api/todo.txt
+++ b/api/todo.txt
@@ -2,18 +2,17 @@ x 2023-11-04 fix player dashboard link on table
 x 2023-11-06 handle unhauthorized state
 x 2023-11-04 display events +player-dashboard
 x 2023-11-04 display podium +player-dashboard
-fix multiple toast +game-dashboard
+x 2023-11-15 fix multiple toast +game-dashboard
 add finished state
-allow gamemaster to change order
+allow game master to change order
 x 2023-11-06 display created / joined games
 x 2023-11-05 format date
-edit actions +game-dashboard
+x 2023-11-15 edit actions +game-dashboard
 x 2023-11-05 hide dead player from the timeline +game-dashboard
 x 2023-11-12 translation
 public game dashboard
 page when player is dead
 qr code
-finsish actions page
+finish actions page
 add link of joined games
-
 @maybe add game configuration (ex: allow display user during the game)
