implement finished state

--- a/frontend/locales/en/common.json
+++ b/frontend/locales/en/common.json
@@ -63,6 +63,7 @@
     "rank": "Rank"
   },
   "GameStartedBadge": {
+    "finished": "Finished",
     "pending": "Draft",
     "progress": "In progress"
   },
