--- a/api/todo.txt
+++ b/api/todo.txt
@@ -3,8 +3,9 @@ x 2023-11-06 handle unhauthorized state
 x 2023-11-04 display events +player-dashboard
 x 2023-11-04 display podium +player-dashboard
 x 2023-11-15 fix multiple toast +game-dashboard
-add finished state
+x 2023-11-18 add finished state
 allow game master to change order
+add the favicon
 x 2023-11-06 display created / joined games
 x 2023-11-05 format date
 x 2023-11-15 edit actions +game-dashboard
