--- a/api/todo.txt
+++ b/api/todo.txt
@@ -5,7 +5,7 @@ x 2023-11-04 display podium +player-dashboard
 x 2023-11-15 fix multiple toast +game-dashboard
 x 2023-11-18 add finished state
 allow game master to change order
-add the favicon
+x 2023-11-18 add the favicon
 x 2023-11-06 display created / joined games
 x 2023-11-05 format date
 x 2023-11-15 edit actions +game-dashboard
