implement landing page

--- a/frontend/locales/en/common.json
+++ b/frontend/locales/en/common.json
@@ -27,7 +27,7 @@
     "podium": "Podium",
     "timeline": "Timeline"
   },
-  "dontShareUrl": "Do not share this URL, it contains your private token and give access to your profile.",
+  "dontShareUrl": "Do not share this URL, it contains your private token and give access to this page.",
   "emptyData": "There is no available data.",
   "Footer": {
     "aboutMe": "About me",
